<resources>
    <string name="app_name">NoticeBook Client</string>
    <string name="loginActivity_inputEmail">email</string>
    <string name="loginActivity_BtnLogin">login</string>
    <string name="loginActivity_inputPassword">passwrod</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_about">About</string>
    <string name="contextMenu_delete">Delete</string>
    <string name="contextMenu_edit">Edit</string>
    <string name="noticeDetailActivity_btnChange">Change</string>
    <string name="noticeDetailActivity_title">title</string>
    <string name="noticeDetailActivity_text">Text</string>
    <string name="noticeDetailActivity_btnSave">Save</string>
    <string name="noticeDetailActivity_btnCancel">Cancel</string>
    <string name="noticeDetailActivity_btnDelete">Delete</string>
    <string name="noticeOverview_btnNew">New notice</string>
</resources>
